--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     /* Grid */
     .grid {
       display: grid;
-      gap: 16px;
-      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      gap: 20px;
+      grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
     }
 
     /* Card */
@@ -71,6 +71,9 @@
       border-radius: 10px;
       padding: 16px;
       transition: transform 160ms ease, box-shadow 160ms ease, border-color 160ms ease;
+      text-decoration: none;
+      color: inherit;
+      cursor: pointer;
     }
     .card:hover {
       transform: translateY(-2px);
@@ -86,6 +89,27 @@
       border-radius: 999px;
       margin-bottom: 8px;
       opacity: 0.9;
+    }
+    .card .content { margin-top: 12px; }
+    .title-link {
+      color: var(--dark-brown);
+      text-decoration: none;
+    }
+    .title-link:hover { text-decoration: underline; }
+    .preview {
+      border-radius: 8px;
+      overflow: hidden;
+      border: 1px solid rgba(92, 61, 46, 0.12);
+      background: var(--white);
+      aspect-ratio: 16 / 10;
+    }
+    .preview iframe {
+      width: 100%;
+      height: 100%;
+      border: 0;
+      display: block;
+      background: var(--white);
+      pointer-events: none;
     }
     .card h3 {
       margin: 8px 0 6px;
@@ -144,24 +168,52 @@
       }
 
       const createCard = (project) => {
-        const anchor = document.createElement('a');
-        anchor.className = 'card';
-        anchor.href = `./${project.slug}/index.html`;
+        const card = document.createElement('a');
+        card.className = 'card';
+        card.href = `./${project.slug}/index.html`;
 
         const badge = document.createElement('span');
         badge.className = 'badge';
         badge.textContent = (project.tags && project.tags[0]) || 'Project';
 
         const title = document.createElement('h3');
-        title.textContent = project.title || project.slug;
+        const titleLink = document.createElement('span');
+        titleLink.className = 'title-link';
+        titleLink.textContent = project.title || project.slug;
+        title.appendChild(titleLink);
 
         const desc = document.createElement('p');
         desc.textContent = project.description || '';
 
-        anchor.appendChild(badge);
-        anchor.appendChild(title);
-        anchor.appendChild(desc);
-        return anchor;
+        const preview = document.createElement('div');
+        preview.className = 'preview';
+        const iframe = document.createElement('iframe');
+        iframe.loading = 'lazy';
+        iframe.src = `./${project.slug}/index.html`;
+        iframe.title = `${project.title || project.slug} preview`;
+        // Hint to browsers to avoid showing scrollbars in the preview
+        iframe.setAttribute('scrolling', 'no');
+        iframe.addEventListener('load', function () {
+          try {
+            const doc = iframe.contentDocument;
+            if (!doc) return;
+            if (doc.documentElement) doc.documentElement.style.overflow = 'hidden';
+            if (doc.body) doc.body.style.overflow = 'hidden';
+          } catch (_) {
+            // Ignore cross-origin or access errors (should be same-origin in this setup)
+          }
+        });
+        preview.appendChild(iframe);
+
+        const content = document.createElement('div');
+        content.className = 'content';
+        content.appendChild(badge);
+        content.appendChild(title);
+        content.appendChild(desc);
+
+        card.appendChild(preview);
+        card.appendChild(content);
+        return card;
       };
 
       projects.forEach(p => grid.appendChild(createCard(p)));
